--- a/header.html
+++ b/header.html
@@ -45,7 +45,7 @@
         </div>
         
         <div class="w3-col s4" style="display: flex; justify-content: end;">
-            <a href="#"><img src="images/perfil.png" alt="perfil" style="max-height: 25px; margin-left: 50px;"></a>
+            <a href="#"><img src="images/perfil.png" alt="perfil" style="max-height: 25px; margin-left: 50px;" class="w3-hover-border-bottom"></a>
             <a href="#"><img src="images/favoritos.png" alt="favoritos" style="max-height: 25px; margin-left: 50px;"></a>
             <a href="#"><img src="images/carrito.png" alt="carrito" style="max-height: 25px; margin-left: 50px;"></a>
         </div>
