--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <div class="item3"><img src="images/oferta3.jpg" alt="Mundo bebé"></div>
         <div class="item4"><img src="images/oferta4.jpg" alt="Mundo bebé"></div>
         <div class="item5"><img src="images/oferta5.jpg" alt="Mundo bebé"></div>
-        </div>
     </section>
 
     <section>
@@ -56,21 +55,31 @@
     </section>
 
     <section>
-        <div class="carousel-container">
-            <div class="carousel" id="carousel">
-                <img src="images/image1.jpg" alt="Imagen 1">
-                <img src="images/image2.jpg" alt="Imagen 2">
-                <img src="images/image3.jpg" alt="Imagen 3">
-                <img src="images/image4.jpg" alt="Imagen 4">
-                <img src="images/image5.jpg" alt="Imagen 5">
+        <div>
+            <h2>Marcas que ofrecemos</h2>
+            <div class="carousel">
+                <a href="https://www.cicatricure.com" target="_blank">
+                    <img src="images/cicatricure.jpg" alt="Imagen 1">
+                </a>
+                <a href="https://www.cetaphil.com" target="_blank">
+                    <img src="images/cetaphril.jpg" alt="Imagen 2">
+                </a>
+                <a href="https://www.larocheposay.com" target="_blank">
+                    <img src="images/larocheposay.jpg" alt="Imagen 3">
+                </a>
+                <a href="https://www.berocca.com" target="_blank">
+                    <img src="images/berocca.png" alt="Imagen 4">
+                </a>
+                <a href="https://www.nutrilon.com" target="_blank">
+                    <img src="images/nutrilon.jpg" alt="Imagen 5">
+                </a>
             </div>
         </div>
     </section>
+    
   </main>
 
-<iframe src="footer.html" width="100%" height="210px" frameborder="0"></iframe>
-
-
+<iframe src="footer.html" width="100%" height="220px" frameborder="0"></iframe>
 
 </body>
 </html>
