--- a/footer.html
+++ b/footer.html
@@ -4,43 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            margin: 0;
-        }
-        footer {
-            background-color: #2C3E50;
-            color: white;
-        }
-
-        .footer-row {
-            display: flex;
-            justify-content: space-around; /* Centra las columnas horizontalmente */
-            gap: 40px; /* Espacio entre columnas */
-            flex-wrap: wrap; 
-        }
-
-        .footer-column {
-            text-align: left; /* Alinea el texto de las columnas a la izquierda */
-        }
-
-        h5{
-            margin-top: 0px;
-            margin-bottom: 5px;
-            font-size: 18px;
-        }
-        .footer-column p {
-            line-height: 0.8;
-        }
-
-
-        .social-icons img {
-            width: 30px; /* Ajusta el tamaño de las imágenes */
-            margin-right: 10px; /* Espacio entre imágenes */
-            margin-top: 60px;
-        }
-
-
     @media (max-width: 768px) {
         .footer-row {
             justify-content: center; /* Centra las columnas en pantallas pequeñas */
