--- a/index.html
+++ b/index.html
@@ -6,6 +6,74 @@
     <title>FarmaClick Header</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="styles.css">
+    <style>
+    @media (max-width: 700px) {
+    /* se ponen solo 2 columnas */
+    .containerDestacados {
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 2rem;
+    margin: 2rem;
+    }
+    /* se achican las cards */
+    .product-card {
+    font-size: 14px; 
+    padding: 5px; 
+    width: 100%;
+    }
+    /* se achican los titulos */
+    .titulo{
+      font-size: 1.5rem;
+    }
+    /* se sacan las fotos de ofertas destacadas */
+    .ofertas-container .item2, 
+    .ofertas-container .item3, 
+    .ofertas-container .item4, 
+    .ofertas-container .item5 {
+    display: none;
+    }
+  /* Aseguramos que el contenedor de ofertas sea un bloque y no grid */
+  .ofertas-container {
+    margin: 0;
+    display: block; /* Cambiamos el layout a bloque */
+    width: 100%; /* Aseguramos que ocupe todo el ancho */
+  }
+
+  /* Hacemos que el primer item ocupe todo el ancho */
+  .ofertas-container .item1 {
+    width: 100%; /* Hace que el item1 ocupe el 100% del ancho */
+    padding: 0;  /* Elimina el padding si es necesario */
+  }
+
+  /* Hacemos que la imagen dentro de .item1 también ocupe todo el ancho */
+  .ofertas-container .item1 img {
+    width: 100%;  /* La imagen ocupa todo el ancho del contenedor */
+    height: auto;  /* La altura se ajusta automáticamente para mantener la proporción */
+}
+
+
+
+
+      /* se sacan las fotos de las marcas que ofrecemos */
+    .carousel a:nth-child(3) {
+    display: none;
+    }
+  
+    .carousel a:nth-child(4) {
+    display: none;
+    }
+  
+    .carousel a:nth-child(5) {
+    display: none;
+    }
+    .carousel img{
+    width: 100px;
+    height: 100px;
+    }
+    .product-card h3{
+    font-size: 15px;
+    }
+  }
+    </style>
 </head>
 <body>
     <iframe src="header.html" width="100%" height= "120px" frameborder="0"></iframe>
@@ -15,7 +83,7 @@
     </section>
 
     <section>
-        <h2>Ofertas destacadas</h2>
+        <h2 class="titulo">Ofertas destacadas</h2>
         <div class="ofertas-container">
         <div class="item1"><img src="images/oferta1.jpg" alt="Mundo bebé"></div>
         <div class="item2"><img src="images/oferta2.jpg" alt="Mundo bebé"></div>
@@ -25,7 +93,7 @@
     </section>
 
     <section>
-        <h2 class="w3-center">Productos destacados</h2>
+        <h2 class="w3-center titulo">Productos destacados</h2>
         <div class="containerDestacados">
             <div class="product-card">
               <img src="images/medicamentos.jpg" alt="Medicamentos">
@@ -56,7 +124,7 @@
 
     <section>
         <div>
-            <h2>Marcas que ofrecemos</h2>
+            <h2 class="titulo">Marcas que ofrecemos</h2>
             <div class="carousel">
                 <a href="https://www.cicatricure.com" target="_blank">
                     <img src="images/cicatricure.jpg" alt="Imagen 1">
