Se agrega la vista productoEspecifico

--- a/buscarProducto.html
+++ b/buscarProducto.html
@@ -17,6 +17,10 @@
     }
 
 /* Estilos del buscarProducto */
+.precio{
+  color: #841F75;
+}
+
 main {
 display: flex;
 flex-direction: column;
@@ -178,37 +182,37 @@ padding: 2rem;
           <div class="card">
             <img src="images/10.jpg" alt="Product Image">
             <h3>Protector Solar Dermaglos Fps 40 X 250ml</h3>
-            <p>$24.568,00</p>
+            <p class="precio">$24.568,00</p>
             <button>Agregar</button>
           </div>
           <div class="card">
             <img src="images/2.jpg" alt="Product Image">
             <h3>Dermaglos Serum Facial Vitamina C 25ml</h3>
-            <p>$25.516,00</p>
+            <p class="precio">$25.516,00</p>
             <button>Agregar</button>
           </div>
           <div class="card">
             <img src="images/3.jpg" alt="Product Image">
             <h3>Dermaglos Serum Facial Niacinamida 30ml</h3>
-            <p>$24.406,00</p>
+            <p class="precio">$24.406,00</p>
             <button>Agregar</button>
           </div>
           <div class="card">
             <img src="images/4.jpg" alt="Product Image">
             <h3>Dermaglos protector solar bebes fps65 120g</h3>
-            <p>$25.906,00</p>
+            <p class="precio">$25.906,00</p>
             <button>Agregar</button>
           </div>
           <div class="card">
             <img src="images/5.jpg" alt="Product Image">
             <h3>Dermaglos protector solar efecto seco 180g</h3>
-            <p>$23.999,00</p>
+            <p class="precio">$23.999,00</p>
             <button>Agregar</button>
           </div>
           <div class="card">
             <img src="images/6.jpg" alt="Product Image">
             <h3>Dermaglos Facial Agua Micelar 6 En 1 X 400ml</h3>
-            <p>$24.568,00</p>
+            <p class="precio">$24.568,00</p>
             <button>Agregar</button>
           </div>
         </div>
