--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@
 
     <header class="w3-container w3-text-white" style="background-color: #2C3E50; display: flex; align-items: center; max-height: 80px;">
         <div class="w3-col s4" style="display:flex; align-items: center;">
-            <a href="#"><img src="images/logo.png" alt="logo" style=" max-height: 100px;"></a>
+            <a href="index.html" target="_top"><img src="images/logo.png" alt="logo" style=" max-height: 100px;"></a>
             <h4>FarmaClick</h4>
         </div>
        
