Correciones del estilo

--- a/footer.html
+++ b/footer.html
@@ -4,26 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-    @media (max-width: 768px) {
-        .footer-row {
-            justify-content: center; /* Centra las columnas en pantallas pequeñas */
-            gap: 20px; /* Espacio reducido entre columnas */
-        }
-
-        .footer-column {
-            flex: 1 1 100%; /* Las columnas ocupan el 100% del ancho en pantallas pequeñas */
-            text-align: center; /* Centra el texto */
-            margin-bottom: 15px; /* Espacio entre columnas */
-        }
-
-        .social-icons img {
-            width: 25px; /* Tamaño más pequeño para los íconos sociales */
-            margin-top: 20px;
-        }
-    }
-    </style>
 </head>
 <body>
 
@@ -40,7 +22,7 @@
         </div>
 
         <div class="footer-columna">
-            <a href="#"><h5>Compra online</h5></a>
+            <h5>Compra online</h5>
             <a href="#"><p>Pedidos</p></a>
             <a href="#"><p>Cómo comprar</p></a>
             <a href="#"><p>Botón de arrepentimiento</p></a>
@@ -52,13 +34,13 @@
             <p>tel: +54 1133935437</p>
             <div class="footer-imagenes">
                 <a href="https://www.instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="Instagram" class="imagenBlanca">
+                    <img src="images/instagram.png" alt="Instagram" class="logo">
                 </a>
                 <a href="https://www.twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="Twitter" class="imagenBlanca">
+                    <img src="images/twitter.png" alt="Twitter" class="logo">
                 </a>
                 <a href="https://www.tiktok.com" target="_blank">
-                    <img src="images/tiktok.png" alt="TikTok" class="imagenBlanca">
+                    <img src="images/tiktok.png" alt="TikTok" class="logo">
                 </a>
             </div>
             
