--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FarmaClick - Carrito</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="carrito.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <iframe src="header.html" width="100%" height="120px" frameborder="0"></iframe>
