--- a/perfil.html
+++ b/perfil.html
@@ -33,13 +33,14 @@
     .card {
       background: white;
       padding: 20px;
+      margin: 20px;
       border-radius: 16px;
       width: 350px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: calc(100vh - 380px); /* Ajusta la altura considerando header y footer */
+      height: 600px; /* Ajusta la altura considerando header y footer */
     }
 
     .card-content {
