--- a/buscarProducto.html
+++ b/buscarProducto.html
@@ -130,6 +130,14 @@ padding: 2rem;
   <iframe src="header.html" width="100%" height= "120px" frameborder="0"></iframe>
 
     <main>
+        <div class="w3-col s4 w3-center dynamic-search-bar" style="display: none;">
+    <input type="text" placeholder="¿Qué estás buscando?" class="w3-border w3-round-xxlarge"
+           style="height: 40px; 
+                  background-image: url('images/busqueda.png'); 
+                  background-repeat: no-repeat; 
+                  background-position: right 10px center; 
+                  background-size: 25px"> 
+</div>
         <div class="buttons">
           <button>6 resultados</button>
           <button>Ordenar por relevancia</button>
