--- a/carrito.html
+++ b/carrito.html
@@ -53,6 +53,19 @@
                     <span>Total</span>
                     <span>$9,000,00</span>
                 </div>
+                <hr>
+
+                <div class="summary-item">
+                    <span>Metodo de pago: </span>
+                    <div>
+                        <label>
+                            <input type="radio" name="payment-method" value="efectivo"> Efectivo
+                        </label>
+                        <label>
+                            <input type="radio" name="payment-method" value="tarjeta"> Tarjeta
+                        </label>
+                    </div>
+                </div>
                 <button class="checkout-btn">Finalizar compra</button>
             </div>
         </div>
