--- a/carrito.html
+++ b/carrito.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <iframe src="header.html" width="100%" height="120px" frameborder="0"></iframe>
+    <a href="index.html"><iframe src="header.html" width="100%" height="120px" frameborder="0"></iframe></a>
 
     <main class="cart-container">
         <h3 class="cart-title">
@@ -57,7 +57,7 @@
 
                 <div class="summary-item">
                     <span>Metodo de pago: </span>
-                    <div>
+                    <div class="pago">
                         <label>
                             <input type="radio" name="payment-method" value="efectivo"> Efectivo
                         </label>
@@ -66,7 +66,7 @@
                         </label>
                     </div>
                 </div>
-                <button class="checkout-btn">Finalizar compra</button>
+                <a href="trackeo.html"><button class="checkout-btn">Finalizar compra</button></a>
             </div>
         </div>
     </main>
