--- a/index.html
+++ b/index.html
@@ -6,78 +6,18 @@
     <title>FarmaClick Header</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-    @media (max-width: 700px) {
-    /* se ponen solo 2 columnas */
-    .containerDestacados {
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 2rem;
-    margin: 2rem;
-    }
-    /* se achican las cards */
-    .product-card {
-    font-size: 14px; 
-    padding: 5px; 
-    width: 100%;
-    }
-    /* se achican los titulos */
-    .titulo{
-      font-size: 1.5rem;
-    }
-    /* se sacan las fotos de ofertas destacadas */
-    .ofertas-container .item2, 
-    .ofertas-container .item3, 
-    .ofertas-container .item4, 
-    .ofertas-container .item5 {
-    display: none;
-    }
-  /* Aseguramos que el contenedor de ofertas sea un bloque y no grid */
-  .ofertas-container {
-    margin: 0;
-    display: block; /* Cambiamos el layout a bloque */
-    width: 100%; /* Aseguramos que ocupe todo el ancho */
-  }
-
-  /* Hacemos que el primer item ocupe todo el ancho */
-  .ofertas-container .item1 {
-    width: 100%; /* Hace que el item1 ocupe el 100% del ancho */
-    padding: 0;  /* Elimina el padding si es necesario */
-  }
-
-  /* Hacemos que la imagen dentro de .item1 también ocupe todo el ancho */
-  .ofertas-container .item1 img {
-    width: 100%;  /* La imagen ocupa todo el ancho del contenedor */
-    height: auto;  /* La altura se ajusta automáticamente para mantener la proporción */
-}
-
-
-
-
-      /* se sacan las fotos de las marcas que ofrecemos */
-    .carousel a:nth-child(3) {
-    display: none;
-    }
-  
-    .carousel a:nth-child(4) {
-    display: none;
-    }
-  
-    .carousel a:nth-child(5) {
-    display: none;
-    }
-    .carousel img{
-    width: 100px;
-    height: 100px;
-    }
-    .product-card h3{
-    font-size: 15px;
-    }
-  }
-    </style>
 </head>
 <body>
     <iframe src="header.html" width="100%" height= "120px" frameborder="0"></iframe>
 <main>
+  <div class="w3-col s4 w3-center dynamic-search-bar" style="display: none;">
+    <a href="buscarProducto.html" target="_top"> <input type="text" placeholder="¿Qué estás buscando?" class="w3-border w3-round-xxlarge"
+           style="height: 40px; width: 250px;
+                  background-image: url('images/busqueda.png'); 
+                  background-repeat: no-repeat; 
+                  background-position: right 10px center; 
+                  background-size: 25px"> </a>
+</div>
     <section class="hero">
       <img src="images/hero.JPG" alt="hero">
     </section>
