--- a/perfil.html
+++ b/perfil.html
@@ -6,6 +6,7 @@
     <title>FarmaClick perfil</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="styles.css">
+    
     <style>
     body {
       margin: 0;
@@ -168,11 +169,12 @@
     .prescription-item img {
       height: 120px; /* Ajuste específico para móviles */
     }
+
   }
   </style>
 </head>
 <body>
-<iframe src="header.html" width="100%" height="120px" frameborder="0"></iframe>
+<a href="index.html"><iframe src="header.html" width="100%" height="120px" frameborder="0"></iframe></a>
 
 <div class="main-content">
   <div class="container">
