--- a/trackeo.html
+++ b/trackeo.html
@@ -120,7 +120,7 @@
     </style>
 </head>
 <body>
-    <iframe src="header.html" width="100%" height="120px" frameborder="0"></iframe>
+    <a href="index.html"><iframe src="header.html" width="100%" height="120px" frameborder="0"></iframe></a>
     <div class="main-content">
         <div class="tracking-container">
             <div class="map-container">
