se agrega uniones de enlaces

--- a/carrito.html
+++ b/carrito.html
@@ -19,7 +19,7 @@
         <div class="cart-content">
             <div class="product-list">
                 <div class="product-item">
-                    <img src="images/buscapina.png" alt="Buscapina" class="product-image">
+                    <a href="vistaProducto.html"><img src="images/buscapina.png" alt="Buscapina" class="product-image"></a>
                     <div class="product-details">
                         <p>Buscapina Grageas X 20</p>
                         <span class="price">$3,000,00</span>
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="product-item">
-                    <img src="images/tafirol.png" alt="Tafirol Forte" class="product-image">
+                    <a href="vistaProducto.html"><img src="images/tafirol.png" alt="Tafirol Forte" class="product-image"></a>
                     <div class="product-details">
                         <p>Tafirol Forte X 30</p>
                         <span class="price">$2,000,00</span>
